welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:2: error: '(' expected but '{' found.
if {(a>=10 && a<=20) && (b>=10 && b<=20)} => return Math.max(a,b)
   ^max1020:5: error: illegal start of simple expression
	} 
        ^